# r3ctf-2026

./: .gitignore  AGENTS.md  CHALLENGE.md  DEPLOY.md  RANK.md  README.md
Crypto/HEuristic/: README.md
Crypto/rECp1cG/: README.md
Crypto/teRRibleRing/: README.md
HEuristic/: README.md  infra.sh
HEuristic/attachment/: CMakeLists.txt  run.sh  server.cc
HEuristic/deploy/: Dockerfile
Mafuyuuuuu/: README.md  infra.sh
Mafuyuuuuu-rev/: README.md  infra.sh
Mafuyuuuuu-rev/deploy/: k8s.yaml
Mafuyuuuuu/deploy/: .dockerignore  Dockerfile.backend  README.md  docker-compose.yml  k8s.yaml
Mafuyuuuuu/solve/: solve.py
Misc/Time Capsule/: README.md
Misc/fw-vpn/: README.md  infra.sh
Misc/netshare/: README.md
Misc/pewpew/: README.md
Misc/trustedhash/: README.md  infra.sh
P1gROXY/: README.md  infra.sh
P1gROXY/attachment/: Dockerfile  README.md
Pwn/P1gROXY/: README.md
Pwn/P1gROXY/attachment/services/proxy/: CMakeLists.txt
Pwn/P1gROXY/attachment/services/proxy/src/policy/: policy.cpp
Pwn/pewpew/: README.md
Pwn/pwn-eazyvpn/: README.md  infra.sh
Pwn/r3map/: README.md  infra.sh
Pwn/whisper/: README.md  checker.rx  infra.sh
Time Capsule/: README.md
TsukisRhythmGame/: README.md  infra.sh
TsukisRhythmGame/deploy/: Dockerfile  app.py  questions_data.json
Web/P1gROXY/: README.md  infra.sh
babycom/: OPS.md  README.md  multirun.py  multirun_example.py  run.py  run_example.py  run_one.sh
babycom/artifacts/: vaultsvc.idl  vaultsvc.tlb
babycom/attachment/: windows-version.txt
blinky/: .dockerignore  README.md  infra.sh
blinky/attachment/: README.md
blinky/attachment_src/: Dockerfile  (+8 more)
definitely-not-a-web-chal/: README.md  infra.sh  solve.py
eazyvpn/: README.md  infra.sh
encrypted-activation/: README.md  infra.sh
escape-cet/: README.md  infra.sh
ezvpn/: README.md  infra.sh
funnygame/: README.md
inside/: README.md  infra.sh
lift/: README.md  infra.sh
minemaze/: README.md  infra.sh
misc-netshare/: README.md  exp.yaml  solve.sh
netshare/: README.md  infra.sh
ops/: README.md  continue_nested_setup.sh  create_nested_pool.sh  drain_old_nodes.sh  gke_monitor.sh  k8s_node_summary.py
pewpew/: README.md  flag.param.md
ploys/: README.md  infra.sh  solve.py
polys/: README.md  infra.sh  solve.py
pwn-mobile-whisper/: .gitignore  README.md  challenge.yaml
pwn-r3map/: README.md
r3chat/: README.md  checker.rx
r3map/: README.md
r3reach/: README.md  infra.sh
r3ticket/: README.md  infra.sh
rECp1cG/: README.md  infra.sh
sanity-check/: README.md  checker.rx
security-usage-intelligence/: README.md  checker.rx
someday/: OPS.md  README.md  multirun.py  multirun_example.py  run.py  run_one.sh
speedrun/: README.md  infra.sh
survey/: README.md  checker.rx
tap2pwn/: README.md  checker.rx
teRRibleRing/: README.md
trustedhash/: README.md  flake.nix
virtisol/: OPS.md  README.md  run.py  run_one.sh
whisper/: README.md  checker.rx
winkernel/: OPS.md  README.md  run_example.py  run_one.sh
z3kapig/: README.md  infra.sh
(+412 files in other folders)
